--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,4 @@ logs/
 *.ConsoleApplication1/obj/Debug/ConsoleApplication1.exe
 *.ConsoleApplication1/obj/Debug/ConsoleApplication1.exe
 ConsoleApplication1/bin/Debug/ConsoleApplication1.pdb
+packages/*
