Added delay to config

--- a/InterceptorTester/App.config
+++ b/InterceptorTester/App.config
@@ -13,5 +13,8 @@
          connectionString="THISISANINVALIDSERIAL"/>
     <add name="TimesToRunTests"
          connectionString="999"/>
+    <!--Affects Async tests only. Delay is in milliseconds-->
+    <add name="DelayBetweenRuns"
+         connectionString="50"/>
   </connectionStrings>
 </configuration>
