Added username/pw to appconfig

--- a/InterceptorTester/App.config
+++ b/InterceptorTester/App.config
@@ -15,5 +15,9 @@
          connectionString="999"/>
     <add name="DelayBetweenRuns"
          connectionString="50"/>
+    <add name="Username"
+         connectionString="username"/>
+    <add name="Password"
+         connectionString="password"/>
   </connectionStrings>
 </configuration>
