--- a/InterceptorTester/App.config
+++ b/InterceptorTester/App.config
@@ -16,8 +16,8 @@
     <add name="DelayBetweenRuns"
          connectionString="50"/>
     <add name="Username"
-         connectionString="username"/>
+         connectionString="001rw"/>
     <add name="Password"
-         connectionString="password"/>
+         connectionString="dootdoot[]1"/>
   </connectionStrings>
 </configuration>
