--- a/InterceptorTester/App.config
+++ b/InterceptorTester/App.config
@@ -6,7 +6,7 @@
     </startup>
   <connectionStrings>
     <add name="Server"
-         connectionString="http://cozumotesttls.cloudapp.net"/>
+         connectionString="http://cozdev01admapiweb.cloudapp.net/"/>
    <add name="ValidSerial"
         connectionString="D05FB84F1606"/>
     <add name="InvalidSerial"
@@ -16,8 +16,8 @@
     <add name="DelayBetweenRuns"
          connectionString="50"/>
     <add name="Username"
-         connectionString="001rw"/>
+         connectionString="870RK"/>
     <add name="Password"
-         connectionString="dootdoot[]1"/>
+         connectionString="foo"/>
   </connectionStrings>
 </configuration>
