--- a/InterceptorTester/App.config
+++ b/InterceptorTester/App.config
@@ -16,7 +16,7 @@
     <add name="DelayBetweenRuns"
          connectionString="50"/>
     <add name="Username"
-         connectionString="870RK"/>
+         connectionString="888QQ"/>
     <add name="Password"
          connectionString="foo"/>
   </connectionStrings>
