Create org happy path

--- a/InterceptorTester/App.config
+++ b/InterceptorTester/App.config
@@ -18,6 +18,6 @@
     <add name="Username"
          connectionString="888QQ"/>
     <add name="Password"
-         connectionString="teet[]*1teet"/>
+         connectionString="foo"/>
   </connectionStrings>
 </configuration>
