--- a/InterceptorTester/App.config
+++ b/InterceptorTester/App.config
@@ -22,6 +22,6 @@
     <add name="Username"
          connectionString="888QQ"/>
     <add name="Password"
-         connectionString="foo"/>
+         connectionString="teet[]*1teet"/>
   </connectionStrings>
 </configuration>
