EVERYTHING WORKS. OH MAN.

--- a/DatabasePopulator/App.config
+++ b/DatabasePopulator/App.config
@@ -5,7 +5,7 @@
     <requestedExecutionLevel level="requireAdministrator" uiAccess="false" />
   </startup>
   <connectionStrings>
-    <add name="Server" connectionString="http://cozdev01admapiweb.cloudapp.net" />
+    <add name="Server" connectionString="http://cozumotesttls.cloudapp.net" />
     <add name="ValidSerial" connectionString="D05FB84F1606" />
     <add name="InvalidSerial" connectionString="THISISANINVALIDSERIAL" />
     <add name="TimesToRunTests" connectionString="1" />
