--- a/InterceptorTester/App.config
+++ b/InterceptorTester/App.config
@@ -6,7 +6,7 @@
     </startup>
   <connectionStrings>
     <add name="Server"
-		 connectionString="http://cozdev01admapiweb.cloudapp.net"/>
+		 connectionString="http://cozumotesttls.cloudapp.net"/>
     <add name="ValidSerial"
          connectionString="D05FB84F1606"/>
     <add name="InvalidSerial"
