--- a/InterceptorTester/InterceptorTester.csproj
+++ b/InterceptorTester/InterceptorTester.csproj
@@ -116,6 +116,7 @@
     <Compile Include="JSON\InterceptorJSON.cs" />
     <Compile Include="NUnitTests\InterceptorTest.cs" />
     <Compile Include="NUnitTests\TestGlobals.cs" />
+    <Compile Include="Data\UpcCode.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
