--- a/InterceptorTester/App.config
+++ b/InterceptorTester/App.config
@@ -7,6 +7,8 @@
   <connectionStrings>
     <add name="Server"
 		 connectionString="http://cozumotesttls.cloudapp.net"/>
+	<add name="IntOpServer"
+		 connectionString="http://cozdev01admapiweb.cloudapp.net"/>
     <add name="ValidSerial"
          connectionString="D05FB84F1606"/>
     <add name="InvalidSerial"
