--- a/.gitignore
+++ b/.gitignore
@@ -233,3 +233,4 @@ logs/testResults.txt
 DatabasePopulator/DatabasePopulator.csproj
 DatabasePopulator/DatabasePopulator.csproj
 logs/PerformanceTestAnalysis.ods
+logs/testLog.txt
