scan populator logging

--- a/DatabasePopulator/App.config
+++ b/DatabasePopulator/App.config
@@ -6,6 +6,7 @@
   </startup>
   <connectionStrings>
     <add name="Server" connectionString="http://cozumotesttls.cloudapp.net" />
+    <add name="AdminServer" connectionString="http://cozdev01admapiweb.cloudapp.net" />
     <add name="ValidSerial" connectionString="D05FB84F1606" />
     <add name="InvalidSerial" connectionString="THISISANINVALIDSERIAL" />
     <add name="TimesToRunTests" connectionString="1" />
