separated demoServer from testServer; added status performance test

--- a/InterceptorTester/App.config
+++ b/InterceptorTester/App.config
@@ -9,8 +9,12 @@
 		 connectionString="http://cozumotesttls.cloudapp.net"/>
 	<add name="AdminServer"
 		 connectionString="http://cozdev01admapiweb.cloudapp.net"/>
+	<add name="DemoServer"
+		 connectionString="http://cozumointops.cloudapp.net"/>
     <add name="ValidSerial"
          connectionString="D05FB84F1606"/>
+    <add name="DemoSerial"
+         connectionString="D05FB84F2A56"/>
     <add name="InvalidSerial"
          connectionString="THISISANINVALIDSERIAL"/>
     <add name="TimesToRunTests"
