Set test server to staging

--- a/InterceptorTester/App.config
+++ b/InterceptorTester/App.config
@@ -6,7 +6,7 @@
     </startup>
   <connectionStrings>
     <add name="Server"
-		 connectionString="http://cozumotesttls.cloudapp.net"/>
+		 connectionString="http://cozumointops.cloudapp.net"/>
 	<add name="AdminServer"
 		 connectionString="http://cozdev01admapiweb.cloudapp.net"/>
 	<add name="DemoServer"
