--- a/InterceptorTester/App.config
+++ b/InterceptorTester/App.config
@@ -6,7 +6,7 @@
     </startup>
   <connectionStrings>
     <add name="Server"
-		 connectionString="http://cozumointops.cloudapp.net"/>
+		 connectionString="http://953890a000d4486b93cca9e3558b7b32.cloudapp.net"/>
 	<add name="AdminServer"
 		 connectionString="http://cozdev01admapiweb.cloudapp.net"/>
 	<add name="DemoServer"
@@ -18,7 +18,7 @@
     <add name="InvalidSerial"
          connectionString="THISISANINVALIDSERIAL"/>
     <add name="TimesToRunTests"
-         connectionString="10"/>
+         connectionString="100"/>
     <add name="DelayBetweenRuns"
          connectionString="200"/>
     <add name="Username"
