--- a/InterceptorTester/App.config
+++ b/InterceptorTester/App.config
@@ -6,7 +6,7 @@
     </startup>
   <connectionStrings>
     <add name="Server"
-		 connectionString="http://0827b63a525242d1b8acc7a31a71c39e.cloudapp.net"/>
+		 connectionString=" http://cozumotesttls.cloudapp.net"/>
 	<add name="AdminServer"
 		 connectionString="http://cozdev01admapiweb.cloudapp.net"/>
 	<add name="DemoServer"
